# billing-service

./: .env-example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 0bf19436ba08_2024_03_06_add_status_column.py  0fd3d9aa63b9_2024_03_07_upgrade_payment.py  1583bbb42208_initial.py  19b28d1fa6cf_2024_03_06_remove_unique_contraint_from_.py  1c7161d0f6ed_2024_03_01_models_corrections.py  252a4e9b8aae_2024_09_02_add_payment_id.py  297a04e662e3_2024_03_09_ad_ondelete.py  37e40302bea1_added_refund_models.py  3b60d1ad5f1e_2024_03_06_add_field_to_enum.py  408399798b12_update_models.py  505a6c4e1375_2024_03_05_remove_external_payment_type_.py  6a3e79453f29_2024_03_06_fix_user_id_type_column.py  7c986d3848f2_2024_03_06_add_nullable_for_field.py  ae7af795a9f6_2024_03_06_change_user_id_column_type.py  d8f415c2bc58_2024_03_06_change_relations.py  d9eb7928a32d_update_models.py  dfbc31283c36_2024_03_06_add_refunds_tables.py  f04722eb4805_2024_02_29_add_payment_id.py  fb4256a3df31_2024_03_06_fix_table_name.py
architecture/: README.md  architecture.md  db_entities.puml  manager_update_subscription.puml  service_architecture.puml  subscription_payment.puml
etc/nginx/: nginx.conf  service_proxy.conf  site.conf
src/: constants.py  dependencies.py  helpers.py  main.py  models.py
src/core/: config.py  exceptions.py  helpers.py  interfaces.py  logger.py
src/db/: postgres.py  redis.py  storages.py
tests/: conftest.py
(+103 files in other folders)
