[project]
name = "Billing Service"
version = "1.0.0"
description = "Billing Service"
requires-python = ">=3.11"


[metadata]
name = "Billing Service"
description-file = "README"


[tool.black]
line-length = 99
target-version = ["py311", "py312"]
include = '\.pyi?$'


[tool.flake8]
max-line-length = 99
